--- a/app/src/main/res/layout/activity_develop.xml
+++ b/app/src/main/res/layout/activity_develop.xml
@@ -5,122 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="sgtmelon.scriptum.presentation.screen.ui.impl.DevelopActivity">
+    tools:context="sgtmelon.scriptum.presentation.screen.ui.impl.preference.DevelopActivity">
+
+    <include layout="@layout/inc_toolbar_simple" />
 
     <FrameLayout
+        android:id="@+id/develop_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.35">
-
-        <ProgressBar
-            android:id="@+id/develop_note_progress"
-            style="@style/ProgressBar.Develop" />
-
-        <ScrollView
-            android:id="@+id/develop_note_scroll"
-            style="@style/Container.Develop.Scroll"
-            tools:visibility="visible">
-
-            <TextView
-                android:id="@+id/develop_note_text"
-                style="@style/Text.Develop"
-                android:text="@string/preview_note_data_base" />
-
-        </ScrollView>
-
-    </FrameLayout>
-
-    <View style="@style/Divider.Horizontal" />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.35">
-
-        <ProgressBar
-            android:id="@+id/develop_roll_progress"
-            style="@style/ProgressBar.Develop" />
-
-        <ScrollView
-            android:id="@+id/develop_roll_scroll"
-            style="@style/Container.Develop.Scroll"
-            tools:visibility="visible">
-
-            <TextView
-                android:id="@+id/develop_roll_text"
-                style="@style/Text.Develop"
-                android:text="@string/preview_roll_data_base" />
-
-        </ScrollView>
-
-    </FrameLayout>
-
-    <View style="@style/Divider.Horizontal" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        tools:ignore="NestedWeights">
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.6">
-
-            <ProgressBar
-                android:id="@+id/develop_rank_progress"
-                style="@style/ProgressBar.Develop" />
-
-            <ScrollView
-                android:id="@+id/develop_rank_scroll"
-                style="@style/Container.Develop.Scroll"
-                tools:visibility="visible">
-
-                <TextView
-                    android:id="@+id/develop_rank_text"
-                    style="@style/Text.Develop"
-                    android:text="@string/preview_rank_data_base" />
-
-            </ScrollView>
-
-        </FrameLayout>
-
-        <View style="@style/Divider.Vertical" />
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.4">
-
-            <ProgressBar
-                android:id="@+id/develop_preference_progress"
-                style="@style/ProgressBar.Develop" />
-
-            <ScrollView
-                android:id="@+id/develop_preference_scroll"
-                style="@style/Container.Develop.Scroll"
-                tools:visibility="visible">
-
-                <TextView
-                    android:id="@+id/develop_preference_text"
-                    style="@style/Text.Develop"
-                    android:text="@string/preview_preference" />
-
-            </ScrollView>
-
-        </FrameLayout>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/develop_intro_button"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/button_show_intro"
-        android:textColor="?attr/clAccent" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
