--- a/app/src/main/res/xml/preference_main.xml
+++ b/app/src/main/res/xml/preference_main.xml
@@ -115,10 +115,10 @@
             android:title="@string/pref_title_other_privacy_policy"
             app:iconSpaceReserved="false" />
 
-        <Preference android:key="@string/pref_key_other_developer"
+        <Preference android:key="@string/pref_key_other_develop"
             app:iconSpaceReserved="false"
-            app:isPreferenceVisible="@bool/pref_other_developer"
-            app:title="@string/pref_title_other_developer" />
+            app:isPreferenceVisible="@bool/pref_other_develop"
+            app:title="@string/pref_title_other_develop" />
 
         <Preference android:key="@string/pref_key_other_about"
             android:title="@string/pref_title_other_about"
