--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -170,12 +170,12 @@
     <string name="pref_key_other_develop" translatable="false">key_other_develop</string>
     <string name="pref_key_other_about" translatable="false">key_other_about</string>
 
-    <string name="pref_key_prints_rank" translatable="false">key_prints_rank</string>
-    <string name="pref_key_prints_note" translatable="false">key_prints_note</string>
-    <string name="pref_key_prints_roll" translatable="false">key_prints_roll</string>
-    <string name="pref_key_prints_alarm" translatable="false">key_prints_alarm</string>
-    <string name="pref_key_prints_visible" translatable="false">key_prints_visible</string>
-    <string name="pref_key_prints_pref" translatable="false">key_prints_pref</string>
+    <string name="pref_key_print_rank" translatable="false">key_print_rank</string>
+    <string name="pref_key_print_note" translatable="false">key_print_note</string>
+    <string name="pref_key_print_roll" translatable="false">key_print_roll</string>
+    <string name="pref_key_print_alarm" translatable="false">key_print_alarm</string>
+    <string name="pref_key_print_visible" translatable="false">key_print_visible</string>
+    <string name="pref_key_print_pref" translatable="false">key_print_pref</string>
 
     <string name="pref_key_screen_intro" translatable="false">key_screen_intro</string>
     <string name="pref_key_screen_alarm" translatable="false">key_screen_alarm</string>
