Make different buttons for open notes/bin entities

--- a/app/src/main/res/xml/preference_develop.xml
+++ b/app/src/main/res/xml/preference_develop.xml
@@ -6,11 +6,13 @@
     <PreferenceCategory android:title="@string/pref_header_prints"
         app:iconSpaceReserved="false">
 
-        <Preference android:key="@string/pref_key_print_rank"
-            android:title="@string/pref_title_prints_rank"
+        <Preference android:key="@string/pref_key_print_note"
+            android:title="@string/pref_title_prints_note"
+            android:summary="@string/pref_summary_print_note"
             app:iconSpaceReserved="false" />
 
-        <Preference android:key="@string/pref_key_print_note"
+        <Preference android:key="@string/pref_key_print_bin"
+            android:summary="@string/pref_summary_print_bin"
             android:title="@string/pref_title_prints_note"
             app:iconSpaceReserved="false" />
 
@@ -18,12 +20,16 @@
             android:title="@string/pref_title_prints_roll"
             app:iconSpaceReserved="false" />
 
-        <Preference android:key="@string/pref_key_print_alarm"
-            android:title="@string/pref_title_prints_alarm"
-            app:iconSpaceReserved="false" />
-
         <Preference android:key="@string/pref_key_print_visible"
             android:title="@string/pref_title_prints_visible"
+            app:iconSpaceReserved="false" />
+
+        <Preference android:key="@string/pref_key_print_rank"
+            android:title="@string/pref_title_prints_rank"
+            app:iconSpaceReserved="false" />
+
+        <Preference android:key="@string/pref_key_print_alarm"
+            android:title="@string/pref_title_prints_alarm"
             app:iconSpaceReserved="false" />
 
         <Preference android:key="@string/pref_key_print_pref"
