--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -37,11 +37,11 @@
     <string name="pref_title_other_develop">Developer settings</string>
     <string name="pref_title_other_about">About app</string>
 
-    <string name="pref_title_prints_rank" translatable="false">Rank entities</string>
     <string name="pref_title_prints_note" translatable="false">Note entities</string>
     <string name="pref_title_prints_roll" translatable="false">Roll entities</string>
-    <string name="pref_title_prints_alarm" translatable="false">Alarm entities</string>
     <string name="pref_title_prints_visible" translatable="false">Roll visible entities</string>
+    <string name="pref_title_prints_rank" translatable="false">Rank entities</string>
+    <string name="pref_title_prints_alarm" translatable="false">Alarm entities</string>
     <string name="pref_title_prints_pref" translatable="false">Preference keys</string>
 
     <string name="pref_title_screen_intro" translatable="false">Intro screen</string>
@@ -69,6 +69,9 @@
     <string name="pref_summary_alarm_melody">Will be play on notification</string>
     <string name="pref_summary_alarm_volume">Percent of volume: %d%%</string>
     <string name="pref_summary_alarm_increase">Smooth volume increase from minimum</string>
+
+    <string name="pref_summary_print_note" translatable="false">Which located in NOTES page</string>
+    <string name="pref_summary_print_bin" translatable="false">Which located in BIN page</string>
 
     <string name="pref_summary_screen_intro" translatable="false">Application will be restarted</string>
     <string name="pref_summary_screen_alarm" translatable="false">Open alarm for random note</string>
@@ -171,11 +174,12 @@
     <string name="pref_key_other_develop" translatable="false">key_other_develop</string>
     <string name="pref_key_other_about" translatable="false">key_other_about</string>
 
-    <string name="pref_key_print_rank" translatable="false">key_print_rank</string>
     <string name="pref_key_print_note" translatable="false">key_print_note</string>
+    <string name="pref_key_print_bin" translatable="false">key_print_bin</string>
     <string name="pref_key_print_roll" translatable="false">key_print_roll</string>
-    <string name="pref_key_print_alarm" translatable="false">key_print_alarm</string>
     <string name="pref_key_print_visible" translatable="false">key_print_visible</string>
+    <string name="pref_key_print_rank" translatable="false">key_print_rank</string>
+    <string name="pref_key_print_alarm" translatable="false">key_print_alarm</string>
     <string name="pref_key_print_pref" translatable="false">key_print_pref</string>
 
     <string name="pref_key_screen_intro" translatable="false">key_screen_intro</string>
