--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -10,6 +10,7 @@
     <string name="title_notification">Notifications</string>
     <string name="title_preference">Settings</string>
     <string name="title_develop" translatable="false">Develop</string>
+    <string name="title_print" translatable="false">Print</string>
 
     <!-- Menu items -->
     <string name="menu_notifications">@string/title_notification</string>
