--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -1,21 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/print_parent_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="sgtmelon.scriptum.presentation.screen.ui.impl.preference.DevelopActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <include layout="@layout/inc_toolbar_simple" />
+    <data>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/print_recycler"
-        style="@style/RecyclerView.Normal"
+        <import type="sgtmelon.scriptum.R" />
+    </data>
+
+    <LinearLayout
+        android:id="@+id/print_parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        tools:itemCount="3"
-        tools:visibility="visible" />
+        android:orientation="vertical"
+        tools:context="sgtmelon.scriptum.presentation.screen.ui.impl.preference.DevelopActivity">
 
-</LinearLayout>
+        <include layout="@layout/inc_toolbar_simple" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <include
+                android:id="@+id/print_info_include"
+                layout="@layout/inc_info"
+                app:details='@{R.string.info_print_empty_details}'
+                app:title='@{R.string.info_print_empty_title}' />
+
+            <ProgressBar
+                android:id="@+id/print_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/print_recycler"
+                style="@style/RecyclerView.Normal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="3"
+                tools:visibility="visible" />
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+</layout>
