Improve PrintItem.Preference items

--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -9,9 +9,10 @@
     <string name="pref_header_alarm">Notifications</string>
     <string name="pref_header_other">Other</string>
 
-    <string name="pref_header_develop" translatable="false">Develop</string>
     <string name="pref_header_prints" translatable="false">Print of entities</string>
     <string name="pref_header_screen" translatable="false">Open screen</string>
+    <string name="pref_header_path" translatable="false">Paths</string>
+    <string name="pref_header_backup_files" translatable="false">Backup files</string>
 
     <!-- Preference titles -->
 
@@ -49,6 +50,10 @@
     <string name="pref_title_screen_alarm" translatable="false">Alarm screen</string>
 
     <string name="pref_title_other_reset" translatable="false">Reset preference</string>
+
+    <string name="pref_title_path_app" translatable="false">App file path</string>
+    <string name="pref_title_path_cache" translatable="false">Cache file path</string>
+    <string name="pref_title_path_save" translatable="false">Save file path</string>
 
     <!-- Preference summaries -->
 
