--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rank_parent_card"
-    style="@style/Card.Item"
-    app:cardBackgroundColor="?attr/clBackgroundView">
+    style="@style/Card.Item.Common">
 
     <LinearLayout
         android:id="@+id/rank_click_container"
