--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -17,8 +17,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/roll_write_parent_card"
-        style="@style/Card.Item"
-        app:cardBackgroundColor="?attr/clBackgroundView">
+        style="@style/Card.Item.Common">
 
         <LinearLayout
             android:layout_width="match_parent"
