Create content for item_print_rank.xml

--- a/app/src/main/res/layout/item_print_note.xml
+++ b/app/src/main/res/layout/item_print_note.xml
@@ -15,7 +15,7 @@
 
             <TextView
                 android:id="@+id/print_note_id_text"
-                style="@style/Text.SmallCard.Print"
+                style="@style/Text.SmallCard.Print.Order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/item_content_between_space"
