--- a/app/src/main/res/layout/item_print_rank.xml
+++ b/app/src/main/res/layout/item_print_rank.xml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Card.Item.Common">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        style="@style/Container.Print"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/item_content_half_between_space"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/print_rank_id_text"
+                style="@style/Text.SmallCard.Print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/item_content_between_space"
+                tools:text="ID: 1" />
+
+            <View style="@style/Divider.Vertical" />
+
+            <TextView
+                android:id="@+id/print_rank_position_text"
+                style="@style/Text.SmallCard.Print.Order"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/item_content_between_space"
+                tools:text="PS: 0" />
+
+            <View style="@style/Divider.Vertical" />
+
+            <TextView
+                android:id="@+id/print_rank_visible_text"
+                style="@style/Text.SmallCard.Print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/item_content_between_space"
+                tools:text="VS: true" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/print_rank_name_text"
+            style="@style/Text.SmallCard.Print"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/item_content_half_between_space"
+            tools:text="NM: Abra cadabra" />
+
+        <TextView
+            android:id="@+id/print_rank_note_id_text"
+            style="@style/Text.SmallCard.Print"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="false"
+            tools:text="NT_ID: 10\n123\n10" />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
