Create content for item_print_visible.xml

--- a/app/src/main/res/values/stings_print.xml
+++ b/app/src/main/res/values/stings_print.xml
@@ -16,5 +16,6 @@
     <string name="print_visible" translatable="false">VS: %s</string>
     <string name="print_note_id" translatable="false">NT_ID: %s</string>
     <string name="print_check" translatable="false">CH: %s</string>
+    <string name="print_value" translatable="false">VL: %s</string>
 
 </resources>
