--- a/app/src/main/res/layout/item_print_visible.xml
+++ b/app/src/main/res/layout/item_print_visible.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Card.Item.Common">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        style="@style/Container.Print"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/print_visible_id_text"
+            style="@style/Text.SmallCard.Print"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/item_content_between_space"
+            tools:text="ID: 1" />
+
+        <View style="@style/Divider.Vertical" />
+
+        <TextView
+            android:id="@+id/print_visible_note_id_text"
+            style="@style/Text.SmallCard.Print.Order"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/item_content_between_space"
+            tools:text="NT_ID: 10" />
+
+        <View style="@style/Divider.Vertical" />
+
+        <TextView
+            android:id="@+id/print_visible_value_text"
+            style="@style/Text.SmallCard.Print"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/item_content_between_space"
+            tools:text="VL: false" />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
