Create content for item_print_alarm.xml

--- a/app/src/main/res/values/stings_print.xml
+++ b/app/src/main/res/values/stings_print.xml
@@ -17,5 +17,6 @@
     <string name="print_note_id" translatable="false">NT_ID: %s</string>
     <string name="print_check" translatable="false">CH: %s</string>
     <string name="print_value" translatable="false">VL: %s</string>
+    <string name="print_date" translatable="false">DT: %s</string>
 
 </resources>
