--- a/app/src/main/res/layout/item_print_pref_key.xml
+++ b/app/src/main/res/layout/item_print_pref_key.xml
@@ -1,6 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Card.Item.Common">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        style="@style/Container.Print"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/item_content_between_space">
+
+            <TextView
+                android:id="@+id/print_pref_key_text"
+                style="@style/Text.SmallCard.Print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/item_content_between_space"
+                tools:text="KEY: 1" />
+
+            <View style="@style/Divider.Vertical" />
+
+            <TextView
+                android:id="@+id/print_pref_def_text"
+                style="@style/Text.SmallCard.Print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/item_content_between_space"
+                tools:text="DEF: 10" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/print_pref_value_text"
+            style="@style/Text.SmallCard.Print"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="VALUE: false" />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
