--- a/app/src/main/res/values/stings_print.xml
+++ b/app/src/main/res/values/stings_print.xml
@@ -19,4 +19,8 @@
     <string name="print_value" translatable="false">VL: %s</string>
     <string name="print_date" translatable="false">DT: %s</string>
 
+    <string name="print_pref_key" translatable="false">Key: %s</string>
+    <string name="print_pref_def" translatable="false">Def: %s</string>
+    <string name="print_pref_value" translatable="false">Value: %s</string>
+
 </resources>
