Create content for item_print_pref_path.xml

--- a/app/src/main/res/values/stings_print.xml
+++ b/app/src/main/res/values/stings_print.xml
@@ -23,4 +23,6 @@
     <string name="print_pref_def" translatable="false">Def: %s</string>
     <string name="print_pref_value" translatable="false">Value: %s</string>
 
+    <string name="print_pref_file_path" translatable="false">Path: %s</string>
+
 </resources>
