--- a/app/src/main/res/layout/item_print_pref_path.xml
+++ b/app/src/main/res/layout/item_print_pref_path.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Card.Item.Common">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        style="@style/Container.Print"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/print_pref_path_text"
+            style="@style/Text.SmallCard.Print"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="false"
+            tools:text="Path: root/android/..." />
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
