--- a/app/src/main/res/layout/item_print_pref_title.xml
+++ b/app/src/main/res/layout/item_print_pref_title.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/item_card_horizontal_margin"
+    android:layout_marginTop="@dimen/item_card_vertical_margin"
+    android:layout_marginEnd="@dimen/item_card_horizontal_margin"
+    android:layout_marginBottom="@dimen/item_card_vertical_margin"
+    android:padding="@dimen/item_container_space">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/print_pref_title_text"
+        style="@style/Text.SmallCard.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="false"
+        tools:text="Test title" />
+
+</FrameLayout>
